--- a/bill/style.css
+++ b/bill/style.css
@@ -1,3 +1,19 @@
-body    {
-    font-family: Arial, Helvetica, sans-serif
+.text   {
+    font-family:    Arial, Helvetica, sans-serif;
+}
+
+div {
+    display:inline;
+}
+
+h1  {
+    text-align: center;
+}
+
+h2  {
+    display:inline;
+}
+
+h3  {
+    display:inline;
 }
