--- a/bill/style.css
+++ b/bill/style.css
@@ -1,19 +1,23 @@
 .text   {
     font-family:    Arial, Helvetica, sans-serif;
+    margin-left:    auto;
+    margin-right:   auto;
 }
 
 div {
-    display:inline;
+    display:        inline;
 }
 
 h1  {
-    text-align: center;
+    text-align:     center;
 }
 
 h2  {
-    display:inline;
+    display:        inline;
+    break-before:   always;
 }
 
 h3  {
-    display:inline;
+    display:        inline;
+    break-before:   always;
 }
