--- a/bill/style.css
+++ b/bill/style.css
@@ -1,9 +1,13 @@
 .text   {
     font-family:    Arial, Helvetica, sans-serif;
-    margin-left:    auto;
-    margin-right:   auto;
+    max-width:      8.5in;
 }
 
+main    {
+    border-style:   solid;
+    border-width:   1px;
+    border-color:   grey;
+}
 div {
     display:        inline;
 }
