--- a/bill/style.css
+++ b/bill/style.css
@@ -1,13 +1,15 @@
 .text   {
     font-family:    Arial, Helvetica, sans-serif;
-    max-width:      8.5in;
 }
 
+/*
 main    {
     border-style:   solid;
     border-width:   1px;
     border-color:   grey;
 }
+*/
+
 div {
     display:        inline;
 }
