--- a/bill/style.css
+++ b/bill/style.css
@@ -1,5 +1,8 @@
-.text   {
-    font-family:    Arial, Helvetica, sans-serif;
+main    {
+    /*
+    font-family:    Arial,  Helvetica,  sans-serif;
+    */
+    font-family:    'Times New Roman',  Times,  serif;
 }
 
 /*
@@ -10,20 +13,18 @@ main    {
 }
 */
 
-div {
+div     {
     display:        inline;
 }
 
-h1  {
+h1      {
     text-align:     center;
 }
 
-h2  {
+h2      {
     display:        inline;
-    break-before:   always;
 }
 
-h3  {
+h3      {
     display:        inline;
-    break-before:   always;
 }
