Set HB# to #9046, etc.

--- a/bill/style.css
+++ b/bill/style.css
@@ -17,6 +17,11 @@ div     {
     display:        inline;
 }
 
+.enacted{
+    font-weight:    bold;
+    font-style:     italic;
+}
+
 h1      {
     text-align:     center;
 }
